--- a/lista.html
+++ b/lista.html
@@ -89,11 +89,128 @@
                 </li>
                 <li class="list-item7">
                     <div class="list-item__imagem img">
-                        <img src="imagens/6.jpg" alt="">
+                        <img src="imagens/7.jpg" alt="">
                     </div>
                     <div class="list-item__name">
-                        <p>Carolyn Silva</p>
-                        <p>carolyn.silva@example.com</p>
+                        <p>Chicão</p>
+                        <p>chicão.bento@example.com</p>
+                    </div>
+                    <div class="list-item__action">
+                        <a href="#"><img src="imagens/edit.png" alt="edit"></a>
+                        <a href="#"><img src="imagens/delete.png" alt="delete"></a>
+                    </div>
+                </li>
+                <li class="list-item8">
+                    <div class="list-item__imagem img">
+                        <img src="imagens/8.jpg" alt="">
+                    </div>
+                    <div class="list-item__name">
+                        <p>Stitch</p>
+                        <p>stitch.lilo@example.com</p>
+                    </div>
+                    <div class="list-item__action">
+                        <a href="#"><img src="imagens/edit.png" alt="edit"></a>
+                        <a href="#"><img src="imagens/delete.png" alt="delete"></a>
+                    </div>
+                </li>
+                <li class="list-item9">
+                    <div class="list-item__imagem img">
+                        <img src="imagens/9.jpg" alt="">
+                    </div>
+                    <div class="list-item__name">
+                        <p>Mickey May</p>
+                        <p>mickey.may@example.com</p>
+                    </div>
+                    <div class="list-item__action">
+                        <a href="#"><img src="imagens/edit.png" alt="edit"></a>
+                        <a href="#"><img src="imagens/delete.png" alt="delete"></a>
+                    </div>
+                </li>
+                <li class="list-item10">
+                    <div class="list-item__imagem img">
+                        <img src="imagens/10.jpg" alt="">
+                    </div>
+                    <div class="list-item__name">
+                        <p>Scooby</p>
+                        <p>scooby.doo@example.com</p>
+                    </div>
+                    <div class="list-item__action">
+                        <a href="#"><img src="imagens/edit.png" alt="edit"></a>
+                        <a href="#"><img src="imagens/delete.png" alt="delete"></a>
+                    </div>
+                </li>
+                <li class="list-item11">
+                    <div class="list-item__imagem img">
+                        <img src="imagens/11.jpg" alt="">
+                    </div>
+                    <div class="list-item__name">
+                        <p>Jerry</p>
+                        <p>jerry.jinx@example.com</p>
+                    </div>
+                    <div class="list-item__action">
+                        <a href="#"><img src="imagens/edit.png" alt="edit"></a>
+                        <a href="#"><img src="imagens/delete.png" alt="delete"></a>
+                    </div>
+                </li>
+                <li class="list-item12">
+                    <div class="list-item__imagem img">
+                        <img src="imagens/12.jpg" alt="">
+                    </div>
+                    <div class="list-item__name">
+                        <p>Moana</p>
+                        <p>moana.waialiki@example.com</p>
+                    </div>
+                    <div class="list-item__action">
+                        <a href="#"><img src="imagens/edit.png" alt="edit"></a>
+                        <a href="#"><img src="imagens/delete.png" alt="delete"></a>
+                    </div>
+                </li>
+                <li class="list-item13">
+                    <div class="list-item__imagem img">
+                        <img src="imagens/13.jpg" alt="">
+                    </div>
+                    <div class="list-item__name">
+                        <p>Alegria</p>
+                        <p>alegria.riley@example.com</p>
+                    </div>
+                    <div class="list-item__action">
+                        <a href="#"><img src="imagens/edit.png" alt="edit"></a>
+                        <a href="#"><img src="imagens/delete.png" alt="delete"></a>
+                    </div>
+                </li>
+                <li class="list-item14">
+                    <div class="list-item__imagem img">
+                        <img src="imagens/14.jpg" alt="">
+                    </div>
+                    <div class="list-item__name">
+                        <p>Timão</p>
+                        <p>timao.leslie@example.com</p>
+                    </div>
+                    <div class="list-item__action">
+                        <a href="#"><img src="imagens/edit.png" alt="edit"></a>
+                        <a href="#"><img src="imagens/delete.png" alt="delete"></a>
+                    </div>
+                </li>
+                <li class="list-item15">
+                    <div class="list-item__imagem img">
+                        <img src="imagens/15.jpg" alt="">
+                    </div>
+                    <div class="list-item__name">
+                        <p>Zoro</p>
+                        <p>roronoa.zoro@example.com</p>
+                    </div>
+                    <div class="list-item__action">
+                        <a href="#"><img src="imagens/edit.png" alt="edit"></a>
+                        <a href="#"><img src="imagens/delete.png" alt="delete"></a>
+                    </div>
+                </li>
+                <li class="list-item16">
+                    <div class="list-item__imagem img">
+                        <img src="imagens/16.jpg" alt="">
+                    </div>
+                    <div class="list-item__name">
+                        <p>Blu</p>
+                        <p>blu.linda@example.com</p>
                     </div>
                     <div class="list-item__action">
                         <a href="#"><img src="imagens/edit.png" alt="edit"></a>
